--- a/modules/srv-mod-terminal-emulator-commands/Cargo.toml
+++ b/modules/srv-mod-terminal-emulator-commands/Cargo.toml
@@ -10,3 +10,7 @@ anyhow = "1.0.86"
 tracing = "0.1.40"
 serde = { version = "1.0.203", features = ["derive"] }
 srv-mod-database = { path = "../srv-mod-database" }
+
+[dev-dependencies]
+tokio = "1.37.0"
+serial_test = "3.1.1"
