--- a/modules/srv-mod-database/Cargo.toml
+++ b/modules/srv-mod-database/Cargo.toml
@@ -19,3 +19,4 @@ rs2-communication-protocol = { path = "../../libs/rs2-communication-protocol" }
 cuid2 = "0.1.2"
 once_cell = "1.19.0"
 serde_json = "1.0.117"
+serde = { version = "1.0.203", features = ["derive"] }
