--- a/modules/srv-mod-database/Cargo.toml
+++ b/modules/srv-mod-database/Cargo.toml
@@ -20,3 +20,4 @@ cuid2 = "0.1.2"
 once_cell = "1.19.0"
 serde_json = "1.0.117"
 serde = { version = "1.0.203", features = ["derive"] }
+clap = { version = "4.5.7", features = ["derive"] }
