--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -28,6 +28,8 @@ serde = { version = "1.0.202", features = ["derive"] }
 serde_json = { version = "1.0.117" }
 tokio = { version = "1", features = ["full"] }  
 anyhow = "1.0.86"
+rand = "0.8.5"
+chrono = "0.4"
 
 [features]
 default = ["protocol-winhttp", "ntallocator"]
