--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -36,7 +36,7 @@ chrono = "0.4"
 futures = "0.3.30"
 
 [features]
-default = ["protocol-winhttp", "ntallocator", "tokio-runtime"]
+default = ["protocol-winhttp", "ntallocator", "std-runtime"]
 protocol-json = ["dep:mod-protocol-json"]
 protocol-winhttp = ["dep:mod-protocol-winhttp"]
 ntallocator = ["dep:mod-ntallocator"]
