--- a/modules/mod-std-runtime/Cargo.toml
+++ b/modules/mod-std-runtime/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+rs2-communication-protocol = { path = "../../libs/rs2-communication-protocol" }
 rs2-runtime = { path = "../../libs/rs2-runtime" }
