--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -19,13 +19,13 @@ rs2-crypt = {path = "../libs/rs2-crypt"}
 mod-agentcore = {path = "../modules/mod-agentcore" }
 mod-hhtgates = {path = "../modules/mod-hhtgates"}
 mod-win32 = {path = "../modules/mod-win32" }
+mod-nostd = {path = "../modules/mod-nostd"}
 mod-ntallocator = {path = "../modules/mod-ntallocator", optional = true }
 mod-protocol-json = {path = "../modules/mod-protocol-json", optional = true}
 mod-protocol-winhttp = {path = "../modules/mod-protocol-winhttp", optional = true}
 mod-tokio-runtime = {path = "../modules/mod-tokio-runtime", optional = true}
 mod-std-runtime = {path = "../modules/mod-std-runtime", optional = true}
-mod-nostd-runtime = {path = "../modules/mod-nostd-runtime"}
-mod-nt-runtime = {path = "../modules/mod-nt-runtime"}
+mod-nostd-nt-runtime = {path = "../modules/mod-nostd-nt-runtime", optional = true}
 rs2-runtime = {path = "../libs/rs2-runtime"}
 libc-print = "0.1.23"
 spin = "0.9"
@@ -38,9 +38,10 @@ chrono = "0.4"
 futures = "0.3.30"
 
 [features]
-default = ["protocol-winhttp", "ntallocator", "std-runtime"]
+default = ["protocol-winhttp", "ntallocator", "nostd-nt-runtime"]
 protocol-json = ["dep:mod-protocol-json"]
 protocol-winhttp = ["dep:mod-protocol-winhttp"]
 ntallocator = ["dep:mod-ntallocator"]
 tokio-runtime = ["dep:mod-tokio-runtime", "dep:tokio"]
 std-runtime = ["dep:mod-std-runtime"]
+nostd-nt-runtime = ["dep:mod-nostd-nt-runtime"]
