--- a/modules/mod-protocol-winhttp/Cargo.toml
+++ b/modules/mod-protocol-winhttp/Cargo.toml
@@ -8,6 +8,7 @@ rs2-communication-protocol = { path = "../../libs/rs2-communication-protocol" }
 rs2-crypt = { path = "../../libs/rs2-crypt" }
 rs2-win32 = {path = "../../libs/rs2-win32"}
 mod-win32 = {path = "../../modules/mod-win32"}
+mod-agentcore = {path = "../../modules/mod-agentcore"}
 serde = { version = "1.0.202", features = ["derive"] }
 serde_json = { version = "1.0.117" }
 bytes = "1.6.0"
