--- a/modules/srv-mod-config/Cargo.toml
+++ b/modules/srv-mod-config/Cargo.toml
@@ -14,3 +14,4 @@ serde_json = "1.0.117"
 nix = { version = "0.29.0", features = ["user"] }
 once_cell = "1.19.0"
 regex = "1.10.4"
+winapi = { version = "0.3.9", features = ["processthreadsapi", "securitybaseapi", "winnt", "handleapi", "minwindef"] }
