--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -34,5 +34,6 @@ srv-mod-config = { path = "../modules/srv-mod-config" }
 srv-mod-operator-api = { path = "../modules/srv-mod-operator-api" }
 srv-mod-database = { path = "../modules/srv-mod-database" }
 srv-mod-http-handler = { path = "../modules/srv-mod-handler-http" }
+rs2-communication-protocol = { path = "../libs/rs2-communication-protocol" }
 
 [features]
