--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ members = [
     "modules/srv-mod-database",
     "modules/srv-mod-handler-base",
     "modules/srv-mod-handler-http",
+    "modules/srv-mod-migration",
     "modules/srv-mod-operator-api",
     "modules/srv-mod-terminal-emulator-commands",
     "server",
