--- a/modules/srv-mod-migration/Cargo.toml
+++ b/modules/srv-mod-migration/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/lib.rs"
 
 [dependencies]
 async-std = { version = "1", features = ["attributes", "tokio1"] }
+srv-mod-entity = { path = "../srv-mod-entity" }
 
 [dependencies.sea-orm-migration]
 version = "1.0.0"
