--- a/libs/rs2-communication-protocol/Cargo.toml
+++ b/libs/rs2-communication-protocol/Cargo.toml
@@ -10,10 +10,8 @@ rs2-crypt = { path = "../rs2-crypt" }
 anyhow = "1.0.89"
 hex-literal = "0.4.1"
 sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"], optional = true }
-
-[dev-dependencies]
-serde_json = "1.0.128"
+serde_json = { version = "1.0.128", optional = true }
 
 [features]
 default = []
-server = ["dep:sea-orm"]
+server = ["dep:sea-orm", "dep:serde_json"]
