--- a/modules/srv-mod-entity/Cargo.toml
+++ b/modules/srv-mod-entity/Cargo.toml
@@ -9,3 +9,4 @@ serde = { version = "1.0.210", features = ["derive"] }
 once_cell = "1.20.2"
 cuid2 = "0.1.3"
 rs2-communication-protocol = { path = "../../libs/rs2-communication-protocol", features = ["server"] }
+humantime = "2.1.0"
